fix: play button icon is cropped at the top

--- a/app/code/Gulacsi/EcommsolversWidget/src/less/main.less
+++ b/app/code/Gulacsi/EcommsolversWidget/src/less/main.less
@@ -67,7 +67,7 @@
                    See app/design/frontend/Gulacsi/Clean/web/css/source
                 */
                 font-size: 50px;
-                line-height: 50px;
+                line-height: 55px;
             }
         }
 
